--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "ts-node src/index.ts",
+		"start": "node dist/index.js",
 		"build": "tsc ",
 		"dev": "ts-node-dev --respawn --transpile-only src/index.ts",
 		"prepare": "husky install",
